Solved grey overlap with modal for phone and small windows

--- a/src/main/webapp/style/viewport.css
+++ b/src/main/webapp/style/viewport.css
@@ -17,6 +17,9 @@
         transform: scale(0.9, 0.9); /* Initial scale factor */
         transform-origin: top left; /* Set the transform origin */
     }
+    .modal-backdrop.show {
+        display: none;
+    }
 }
 
 
